syntax = "proto3";

option go_package = "case-studies/grpc/cmd/movie";

package movie;

import "movie_messages.proto";

service Getter {
  rpc GetMovieByRatings (GetMovieInput) returns (GetMovieOutput) {}

  rpc GetMovieByRatingsChat (stream GetMovieInput) returns (stream GetMovieOutput) {}
}
